--- a/Mastodon.html
+++ b/Mastodon.html
@@ -1,3 +1,3 @@
 <html>
-Proving I am <a href="https://infosec.exchange/@ick" rel="me">@ick@infosec.exchange</a> on Mastodon
+  Proving I am <a rel="me" href="https://infosec.exchange/@ick">@ick@infosec.exchange on Mastodon</a>
 </html>
